add files for hairLength dump GC information to worker logs