@@ -1,10 +1,11 @@
 /usr/lib/spark/bin/spark-submit \
 --py-files crfprocess.zip \
---files eyeColor_config.txt,eyeColor_reference_wiki.txt,hairColor_config.txt,hairColor_reference_wiki.txt,hairTexture_config.txt,hairTexture_reference_wiki.txt,crf_test_filter.sh,crf_test \
+--files eyeColor_config.txt,eyeColor_reference_wiki.txt,hairColor_config.txt,hairColor_reference_wiki.txt,hairTexture_config.txt,hairTexture_reference_wiki.txt,hairLength_config.txt,hairLength_reference_wiki.txt,crf_test_filter.sh,crf_test \
 --master yarn-client \
 --driver-memory 8g \
 --executor-memory 80G  --executor-cores 5 \
 --num-executors 20 \
+--conf "spark.executor.extraJavaOptions=-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps" \
   crfprocess.py \
   $@
 
